changes in ejs files

--- a/views/Listings/Edit.ejs
+++ b/views/Listings/Edit.ejs
@@ -1,4 +1,4 @@
-<% layout("/layout/boilerplate") -%>
+<% layout("/Layout/boilerplate") -%>
      <div class="row mt-2">
         <div class="col-8 offset-2">
             <h1>Edit your Listing</h1>
