--- a/views/Listings/Error.ejs
+++ b/views/Listings/Error.ejs
@@ -1,4 +1,4 @@
-<% layout("/layout/boilerplate") -%>
+<% layout("/Layout/boilerplate") -%>
 <div class="row col-7 offset-3 mt-3 ">
    <div class="alert alert-danger" role="alert">
    <p class="alert-mess"><%=message%></p>
