--- a/views/Listings/Create.ejs
+++ b/views/Listings/Create.ejs
@@ -1,4 +1,4 @@
-<% layout("/layout/boilerplate") -%>
+<% layout("/Layout/boilerplate") -%>
     <div class="row mt-2">
         <div class="col-8 offset-2">
     <h2>Create a New Listing</h2>
