--- a/views/Listings/Search.ejs
+++ b/views/Listings/Search.ejs
@@ -1,4 +1,4 @@
-<% layout("/layout/boilerplate") -%>
+<% layout("/Layout/boilerplate") -%>
 <div class="Container row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
        <% for(let list of listings){%>
    <a href="/Listing/<%=list._id%>">
