--- a/views/Listings/Show.ejs
+++ b/views/Listings/Show.ejs
@@ -1,4 +1,4 @@
-<% layout("/layout/boilerplate") -%>
+<% layout("/Layout/boilerplate") -%>
 <div class="row">
  <div class="col-8 offset-3 mt-2">
   <h3> <b> <%=list.title%> </b></h3>
