changes in routes files

--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -1,4 +1,4 @@
-<% layout("/layout/boilerplate") -%>
+<% layout("/Layout/boilerplate") -%>
     <div class="row mt-2">
         <h1 class="col-6 offset-3">SignUp on TravelMate</h1>
         <div class="col-6 offset-3">
